# cfdna-epigenomics-mini

./: CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
cfdna-epigenomics-mini/: LICENSE  Makefile  README.md  pyproject.toml
cfdna-epigenomics-mini/data/: synthetic_config.yaml
cfdna-epigenomics-mini/notebooks/: 01_experimental_design.ipynb  02_qc_eda.ipynb  03_training_baselines_vs_mlp.ipynb
cfdna-epigenomics-mini/src/cfdna/: __init__.py  eval.py  metrics.py  simulate.py
cfdna-epigenomics-mini/src/cfdna/aws/: batch_job_def.json
cfdna-epigenomics-mini/src/cfdna/sql/: example_queries.sql
cfdna-epigenomics-mini/tests/: test_simulate.py
smoke_test/: config.yaml  report.html
smoke_test/data/: X_frag.parquet  X_meth.parquet  metadata.csv  y.csv
smoke_test/eval/: evaluation_results.json  evaluation_summary.csv  metrics.json
smoke_test/features/: X_features.parquet  splits.json  y.csv
smoke_test/models/: logistic_model.pkl  logistic_test_predictions.csv  logistic_train_predictions.csv  logistic_val_predictions.csv  training_results.json
src/cfdna/: __init__.py  _version.py  cli.py  eval_models.py  features.py  models.py  preprocessing.py  report_gen.py  schemas.py  train.py  train_models.py  viz.py
src/cfdna/aws/: Dockerfile  submit_batch_job.py
src/cfdna/sql/: load_to_sqlite.py  schema.sql
src/cfdna_epigenomics_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_features.py  test_metrics.py  test_models.py  test_schemas.py
